# openassetwatch

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE_POLICY.md  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  docker-compose.yml  go.mod
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: Dockerfile  README.md  requirements.txt
cmd/: README.md
collector/: README.md  example-collector.yaml  pyproject.toml
collector/install/: install-linux.sh  install-macos.sh  install-windows.cmd  install.py  service_manager.py
collector/openassetwatch_collector/: __init__.py  __main__.py  capabilities.py  main.py
collector/openassetwatch_collector/open_detector/: __init__.py  detectors.py  models.py  platform.py  safety.py  scanner.py
collector/tests/: __init__.py  test_capabilities.py  test_config.py  test_installer.py  test_inventory_upload.py  test_network_filtering.py  test_open_detector.py  test_policy.py  test_scheduler.py  test_service_manager.py
configs/: README.md
database/: schema.sql
docker/: README.md
docs/: AGENT_CHECKIN.md  AGENT_COLLECTION.md  AGENT_INSTALLATION.md  AGENT_LIFECYCLE.md  AGENT_MACOS_DEPLOYMENT.md  AGENT_WINDOWS_DEPLOYMENT.md  CONTROL_TOWER_DEPLOYMENT.md  DEPLOYMENT_SIZING.md  GO_MIGRATION_PLAN.md  INGESTION_API.md  INSTALLERS.md  LOCAL_DEV_SETUP.md  LOCAL_E2E.md  PRODUCT_ARCHITECTURE.md  RELEASE_PIPELINE.md  RELEASE_TRUST.md  RESTRUCTURE_PLAN.md  SECURITY_TOOL_POLICY.md  SIGNED_RELEASES.md
frontend/: README.md
internal/: README.md
(+186 files in other folders)
