[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openassetwatch-collector"
version = "0.1.0"
description = "OpenAssetWatch standalone collector"
requires-python = ">=3.10"

[project.scripts]
openassetwatch-collector = "openassetwatch_collector.main:main"

[tool.setuptools.packages.find]
where = ["."]
